--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+    namespace = "com.abedelazizshe.light_compressor"
     compileSdkVersion 33
 
     sourceSets {
