--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -27,6 +27,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 33
+    namespace = "com.abedelazizshe.light_compressor_example"
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
